--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 平凡的世界
+title: Lei
 email: yuhonglei86@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   
