--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Lei
 email: yuhonglei86@gmail.com
-description: 小白学编程
+description: 莫等闲，白了少年头，空悲切。
   
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
