--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Lei
+title: 博客
 email: yuhonglei86@gmail.com
-description: 岁月不待人
+description: 
   
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
