--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: 博客
 email: yuhonglei86@gmail.com
-description: 
+description: >- # this means to ignore newlines until "baseurl:" 
   
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
